# GifViewer

./: LICENSE.MD  README.md  TODO.MD  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: files.rs  formats.rs  main.rs  menu.rs  multimedia.rs
src/components/: Display.tsx
src/state/: index.tsx
src/styles/: media.css  style.css
src/types/: backendResponse.tsx  fileDropEvent.tsx  multimedia.tsx
