[package]
name = "project00"
version = "0.0.0"
description = "A Tauri App"
authors = ["hjoncour"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
base64 = "0.13"
serde_json = "1.0"
lazy_static = "1.4"
system-tray = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["dialog-all", "fs-all", "system-tray"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
